Fix alignment of bulleted list

--- a/Beocreate2/beo-extensions/setup/setup.css
+++ b/Beocreate2/beo-extensions/setup/setup.css
@@ -69,6 +69,15 @@
 	text-align: center;
 }
 
+#setup .menu-content:before,
+#setup-finish .menu-content:before {
+	display: none;
+}
+
+ul.setup-list {
+	text-align: left;
+}
+
 .setupsetup-image {
 	width: 100%;
 	display: block;
